Generate tiles with direct BEAST inputs